Fixing bugs, addind DI, adding filter, paging and sort options

--- a/WebAPI/WebAPI/Service.Common/Service.Common.csproj
+++ b/WebAPI/WebAPI/Service.Common/Service.Common.csproj
@@ -7,8 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="/Users/mislavcacic/Documents/Programming/Mono praksa/WebAPI/WebAPI/Common/Common.csproj"/>
-    <ProjectReference Include="/Users/mislavcacic/Documents/Programming/Mono praksa/WebAPI/WebAPI/Model/Model.csproj"/>
+    <ProjectReference Include="../Common/Common.csproj"/>
+    <ProjectReference Include="../Model/Model.csproj"/>
   </ItemGroup>
+
 
 </Project>
