--- a/Frontend/Project/car_go/package.json
+++ b/Frontend/Project/car_go/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "state_usage",
+  "name": "car_go",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.7.9",
-    "cra-template": "1.2.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^13.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.5",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
